# searchthing

./: Cargo.toml  README.md
example_c_plugin/: Makefile  plugin.c
example_rust_plugin/: Cargo.toml
example_rust_plugin/src/: lib.rs
modules/applications/: Cargo.toml
modules/applications/src/: find_desktop_entries.rs  lib.rs
modules/dmenu/: Cargo.toml
modules/dmenu/src/: lib.rs
modules/plugin/: Cargo.toml
modules/plugin/src/: lib.rs
modules/symbols/: Cargo.toml  codepoints
modules/symbols/src/: lib.rs
searchthing/: Cargo.toml
searchthing-interface/: Cargo.toml
searchthing-interface/src/: lib.rs
searchthing/src/: fonts.rs  icon_search.rs  main.rs  ui.rs
