[package]
name = "searchthing"
version = "0.1.0"
edition = "2021"

[dependencies]

searchthing-interface = { path = "../searchthing-interface" }
applications = { path = "../modules/applications" }
dmenu = { path = "../modules/dmenu" }
plugin = { path = "../modules/plugin" }
symbols = { path = "../modules/symbols" }

egui_inspect = { git = "https://github.com/dmirauta/egui_inspect", branch = "0_31", features = [
  "logging",
] }
egui_extras = { version = "0.31", features = ["all_loaders"] }
walkdir = "2.5.0"
clap = { version = "4.5", features = ["derive"] }
swash = "0.2.2"
